--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,10 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
-src/output.css
+node_modules
+input.css
+*.json
+gitignore
 dist
 dist-ssr
 *.local
